feat: feat: 전체 기능 구현 (BinaryContent Service 일부, *BinaryContentRepository, File*Repository 제외)